sans le changement de ligne et modification PSC TIM3

--- a/AfficheurTournant_Partie3_Exo31/AfficheurTournant_Partie3_Exo31.ioc
+++ b/AfficheurTournant_Partie3_Exo31/AfficheurTournant_Partie3_Exo31.ioc
@@ -202,7 +202,7 @@ TIM17.IPParameters=Period,Prescaler
 TIM17.Period=0xFFFF
 TIM17.Prescaler=PSC_TIM17
 TIM3.IPParameters=Prescaler,Period
-TIM3.Period=350-1
+TIM3.Period=345
 TIM3.Prescaler=PSC_TIM3
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
